<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/icon_actionbar_activate" android:id="@id/action_activate" android:title="@string/activate" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/icon_actionbar_moveto" android:id="@id/action_moveto" android:title="@string/move_to" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/icon_actionbar_goal" android:id="@id/action_goal" android:title="@string/goal" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/icon_actionbar_context" android:id="@id/action_context" android:title="@string/context" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/icon_actionbar_delete" android:id="@id/action_trash" android:title="@string/delete" android:showAsAction="ifRoom" />
</menu>