<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:doit="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/task_detail_block_margin_bottom" android:paddingBottom="26.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/ghs_section_config" style="@style/settings_label" />
        <RelativeLayout android:id="@id/ghs_block_1" android:layout_marginBottom="0.0dip" style="@style/task_detial_block_wrap">
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/ghs_token" doit:label="@string/ghs_token" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/ghs_repo" android:layout_below="@id/ghs_token" doit:label="@string/ghs_repo" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/ghs_issue_repo" android:layout_below="@id/ghs_repo" doit:label="@string/ghs_issue_repo" style="@style/task_detail_cell_wrap" />
        </RelativeLayout>
        <TextView android:text="@string/ghs_section_sync" style="@style/settings_label" />
        <RelativeLayout android:id="@id/ghs_block_2" android:layout_marginBottom="0.0dip" style="@style/task_detial_block_wrap">
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/ghs_upload" doit:label="@string/ghs_upload" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/ghs_restore" android:layout_below="@id/ghs_upload" doit:label="@string/ghs_restore" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/ghs_crash_log" android:layout_below="@id/ghs_restore" doit:label="@string/ghs_crash_log" style="@style/task_detail_cell_wrap" />
        </RelativeLayout>
        <TextView android:id="@id/ghs_last_sync" style="@style/settings_label" />
    </LinearLayout>
</ScrollView>
