<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:doit="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingTop="@dimen/task_detail_block_margin_bottom" android:paddingBottom="26.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_marginBottom="0.0dip" style="@style/task_detial_block_wrap">
            <im.doit.pro.ui.component.LabelSwitchButton android:id="@id/remind_switch" style="@style/task_detail_cell_wrap" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/remind_times" android:layout_marginTop="@dimen/task_detail_block_margin_bottom" android:layout_marginBottom="0.0dip" style="@style/task_detial_block_wrap">
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/monday" doit:label="@string/monday" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/tuesday" android:layout_below="@id/monday" doit:label="@string/tuesday" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/wednesday" android:layout_below="@id/tuesday" doit:label="@string/wednesday" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/thursday" android:layout_below="@id/wednesday" doit:label="@string/thursday" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/friday" android:layout_below="@id/thursday" doit:label="@string/friday" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/saturday" android:layout_below="@id/friday" doit:label="@string/saturday" style="@style/task_detail_cell_wrap" />
            <im.doit.pro.ui.component.LabelArrowButton android:id="@id/sunday" android:layout_below="@id/saturday" doit:label="@string/sunday" style="@style/task_detail_cell_wrap" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>