<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/cancel_btn" android:text="@string/cancel" style="@style/topbar_text_btn" />
    <ImageButton android:id="@id/back_btn" android:src="@drawable/actionbar_back_btn" android:contentDescription="@string/back" style="@style/task_detail_topbar_btn" />
    <Button android:id="@id/send_btn" android:text="@string/send" android:layout_toLeftOf="@id/divider" style="@style/topbar_text_btn" />
    <View android:id="@id/divider" android:layout_toLeftOf="@id/save_btn" style="@style/task_detail_topbar_divider" />
    <Button android:id="@id/save_btn" android:text="@string/save" android:layout_alignParentRight="true" style="@style/topbar_text_btn" />
</RelativeLayout>