<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scroll_view" android:background="@drawable/bg_signin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:doit="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <im.doit.pro.ui.component.DButton android:gravity="center" android:id="@id/back_btn" android:background="@drawable/icon_signup_back" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:layout_width="44.0dip" android:layout_height="44.0dip" android:onClick="onBackClick" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="@dimen/signin_content_width" android:layout_height="0.0dip" android:layout_marginTop="58.0dip" android:layout_marginBottom="12.0dip" android:layout_weight="1.0">
            <im.doit.pro.ui.component.KeyboardDetectorRelativeLayout android:id="@id/wrap_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <im.doit.pro.ui.component.DEditText android:id="@id/username" android:hint="@string/username" android:maxLength="@integer/username_max_length" android:drawableLeft="@drawable/icon_signin_user" android:inputType="textCapCharacters" style="@style/signin_edittext" />
                <im.doit.pro.ui.component.DEditText android:id="@id/email" android:hint="@string/email" android:maxLength="@integer/email_max_length" android:drawableLeft="@drawable/icon_signup_email" android:layout_below="@id/username" android:inputType="textEmailAddress" style="@style/signin_edittext" />
                <im.doit.pro.ui.component.DEditText android:id="@id/password" android:hint="@string/password" android:maxLength="@integer/password_max_length" android:drawableLeft="@drawable/icon_signin_password" android:layout_below="@id/email" android:inputType="textPassword" style="@style/signin_edittext" />
                <im.doit.pro.ui.component.DButton android:id="@id/signin_btn" android:text="@string/sign_up" android:onClick="onSignupClick" style="@style/signin_btn" />
                <TextView android:id="@id/choose_server" android:onClick="onChooseServerClick" style="@style/choose_server_text_btn" />
            </im.doit.pro.ui.component.KeyboardDetectorRelativeLayout>
            <im.doit.pro.ui.component.AutoBreakViewGroup android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                <TextView android:text="@string/register_agree" style="@style/signup_text" />
                <TextView android:text="@string/terms_of_service" android:onClick="onTermsOfServiceClick" style="@style/signup_link_text" />
                <TextView android:text="@string/and" style="@style/signup_text" />
                <TextView android:text="@string/privacy_policy" android:onClick="onPrivacyPolicyClick" style="@style/signup_link_text" />
                <TextView android:text="@string/ja_agree" style="@style/signup_text" />
            </im.doit.pro.ui.component.AutoBreakViewGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>